try and use hover state purpose on submit button, visibility causes bugs on certain break points

--- a/styles/_part-header.scss
+++ b/styles/_part-header.scss
@@ -182,6 +182,10 @@
         border-radius: 50%;
         background-color: $black;
 
+        &:hover {
+          right: -3px;
+        }
+
         &.toggle {
           visibility: hidden;
         }
